# instantquote

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/adr/: 001-use-python-and-openai-sdk.md  002-use-structured-outputs.md
docs/architecture/: 001-system-overview.md
docs/learning/: 01-python-api-integration.md
docs/product/: mvp-scope.md  quote-schema.md  user-stories.md
scripts/: __init__.py  create_quote_from_audio.py  create_quote_from_inputs.py
src/instantquote/: __init__.py  audio_validation.py  config.py  input_validation.py  models.py  quote_inputs.py
src/instantquote/renderers/: __init__.py  markdown_renderer.py
src/instantquote/services/: quote_extraction_service.py  transcription_service.py
tests/: test_file_validation.py  test_input_validation.py  test_markdown_renderer.py  test_models.py  test_quote_inputs.py
tests/fixtures/: sample_quote_draft.json  sample_transcript.txt
