[project]
name = "instantquote"
version = "0.1.0"
description = "Turn tradesperson voice notes into structured quote drafts."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.92.0",
    "pydantic>=2.11.0",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pytest>=8.4.0",
    "ruff>=0.11.0",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
files = ["src", "scripts", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
